--- a/wp-content/themes/goiteens/assets/blog/css/style.css
+++ b/wp-content/themes/goiteens/assets/blog/css/style.css
@@ -4076,7 +4076,7 @@ input[type=tel].input-field {
 }
 @media (max-width: 767.98px) {
   .subscribe {
-    background-image: url("..images/subscribe/wave-mobile.svg");
+    background-image: url("../images/subscribe/wave-mobile.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: bottom -20px right 0;
@@ -4084,7 +4084,7 @@ input[type=tel].input-field {
 }
 @media (min-width: 1280px) {
   .subscribe {
-    background-image: url("..images/subscribe/wave-desktop.svg");
+    background-image: url("../images/subscribe/wave-desktop.svg");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: bottom, left;
@@ -4570,6 +4570,7 @@ input[type=tel].input-field {
 }
 @media (min-width: 1280px) {
   .lesson-title {
+    text-align: left;
     margin: 0;
     margin-bottom: 124px;
     width: 490px;
@@ -4633,16 +4634,16 @@ input[type=tel].input-field {
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
-  top: 6px;
+  top: 10px;
   left: 3px;
-  width: 140px;
+  width: 132px;
   height: 16px;
 }
 @media (min-width: 768px) {
   .lesson-title__span::before {
     width: 328px;
     height: 40px;
-    top: 15px;
+    top: 25px;
     left: 10px;
   }
   .lesson-title__span::after {
