--- a/wp-content/themes/goiteens/assets/css/testimonials-page.css
+++ b/wp-content/themes/goiteens/assets/css/testimonials-page.css
@@ -20,3 +20,8 @@
     color: #E03EAB;
     font-family: "Gotham Pro";
 }
+@media (max-width: 1280px) {
+    .header .contact-tel {
+        margin-left: 0px;
+    }
+}
