--- a/wp-content/themes/goiteens/assets/css/courses-all.css
+++ b/wp-content/themes/goiteens/assets/css/courses-all.css
@@ -1909,8 +1909,8 @@ a[href^="tel:"]::before {
 .courses__age {
   font-weight: 700;
   color: var(--white-cl);
-  max-width: 100%;
-  width: 186px;
+  max-width: 200px;
+  min-width: 186px;
   height: 35px;
   padding: 7px 20px;
   background-color: var(--purple-cl);
