--- a/wp-content/themes/goiteens/assets/blog/css/custom.css
+++ b/wp-content/themes/goiteens/assets/blog/css/custom.css
@@ -62,4 +62,162 @@
         top: -5px;
     }
 }
+/**
+ * Contact Form 7
+ */
+.wpcf7-form-control-wrap {
+    position: relative;
+    display: block;
+}
+.wpcf7-list-item {
+    margin:0;
+}
+.wpcf7-acceptance label {
+    margin-left: 0;
+    font-size: 18px;
+    line-height: 1.4;
+    padding-left: 50px;
+    position: relative;
+    display: inline-block;
+    min-width: 200px;
+    color: #ffffff;
+    font-weight: 500;
+    text-align: left;
+}
+@media (max-width: 1280px) {
+    .wpcf7-acceptance label {
+        font-size: 18px;
+        line-height: 1.4;
+        padding-left: 50px;
+        margin-left: 65px;
+    }
+}
+@media (max-width: 768px) {
+    .wpcf7-acceptance label {
+        padding-left: 30px;
+        font-size: 14px;
+        min-width: 200px;
+        text-align: left;
+        margin-left: 0px;
+    }
+}
+
+.wpcf7-acceptance label input[type="checkbox"] {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 0;
+    top: 2px;
+}
+.wpcf7-not-valid-tip {
+    position: absolute;
+    left: 52px;
+    bottom: 3px;
+    font-size: 13px;
+    font-weight: 500;
+    color: red;
+}
+@media (max-width: 768px) {
+    .wpcf7-not-valid-tip {
+        left: 0px;
+    }
+}
+.wpcf7 form .wpcf7-response-output {
+    padding: 0;
+    margin: 0;
+    border: none;
+    max-width: 400px;
+}
+@media (max-width: 1280px) {
+    .wpcf7 form .wpcf7-response-output {
+        margin-left: 65px;
+    }
+}
+@media (max-width: 768px) {
+    .wpcf7 form .wpcf7-response-output {
+        margin-left: 0px;
+    }
+}
+.wpcf7 form.invalid .wpcf7-response-output,
+.wpcf7 form.unaccepted .wpcf7-response-output,
+.wpcf7 form.payment-required .wpcf7-response-output {
+    padding-top: 25px;
+}
+.wpcf7 form.sent .wpcf7-response-output {
+    padding-top: 25px;
+}
+
+.wpcf7Submit .subscribe-form__box {
+    position: relative;
+}
+
+@-webkit-keyframes opacity-ellipsis {
+    0% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+        opacity: 1;
+    }
+    100% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes opacity-ellipsis {
+    0% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+        opacity: 1;
+    }
+    100% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+        opacity: 0;
+    }
+}
+
+@keyframes opacity-ellipsis {
+    0% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+        opacity: 1;
+    }
+    100% {
+        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+        opacity: 0;
+    }
+}
+.btn__loading i {
+    -webkit-animation-name: opacity-ellipsis;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-name: opacity-ellipsis;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: infinite;
+    -ms-animation-name: opacity-ellipsis;
+    -ms-animation-duration: 1s;
+    -ms-animation-iteration-count: infinite;
+}
+.btn__loading i:nth-child(2) {
+    -webkit-animation-delay: 100ms;
+    animation-delay: 100ms;
+}
+.btn__loading i:nth-child(3) {
+    -webkit-animation-delay: 300ms;
+    animation-delay: 300ms;
+}
+
+.wpcf7 form.lesson-form .wpcf7-response-output {
+    margin-left: 0px;
+    text-align: left;
+    max-width: none;
+}
+
+.lesson-form .wpcf7-not-valid-tip {
+    left: 56px;
+    bottom: 30px;
+}
+@media (max-width: 768px) {
+    .lesson-form .wpcf7-not-valid-tip {
+        left: 24px;
+        bottom: 23px;
+        font-size: 11px;
+    }
+}
 
