initial files for sale's page

--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -42,3 +42,8 @@ $color-green        :   #19B500;
 $color-purple       :   #7C62E3;
 $color-pink         :   #e01d4f;
 $color-orange       :   #F95738;
+$color-sale-yellow  :   #FED32B;
+$color-sale-purple  :   #AA43A2;
+$color-sale-ashen   :   #F9F0F8;
+$color-sale-black   :   #202020;
+$color-tabs-yellow   :   #FEC830
