--- a/wp-content/themes/goiteens/assets/scss/main.scss
+++ b/wp-content/themes/goiteens/assets/scss/main.scss
@@ -4,7 +4,8 @@
  * Variables
  */
 @import "base/variables";
-
+@import "base/container";
+@import "base/visibility-hidden";
 /**
  * Mixins
  */
@@ -34,4 +35,4 @@
  * Pages
  */
 @import "layout/page/home/index";
-
+@import "layout/page/sales/index";
