--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_sales-section-title.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_sales-section-title.scss
@@ -18,13 +18,19 @@
 
 }
 .sales-section-title--hero{
+    position: absolute;
     font-size: 22px;
     margin: 0;
+    text-align: left;
+    top: 80px;
+    z-index: 5;
 
     @media screen and (min-width: 768px) {
+        top: 220px;
         font-size: 32px;
     };
     @media screen and (min-width: 1200px) {
+        top: 240px;
         font-size: 48px;
     };
 
