--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
@@ -6,12 +6,14 @@
   padding-bottom: 60px;
 }
 .studding-process_description {
+  margin-bottom: 32px;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0px 1px 2px rgba(92, 46, 145, 0.08),
     10px 10px 40px rgba(92, 46, 145, 0.24);
   @media screen and (min-width: 768px) {
     padding: 40px;
+    margin-bottom: 32px;
   }
   @media screen and (min-width: 1200px) {
     padding: 60px;
@@ -20,18 +22,19 @@
 .studding-process_timeline {
     box-shadow: 0px 1px 2px rgba(92, 46, 145, 0.08), 10px 10px 40px rgba(92, 46, 145, 0.24);
     padding: 20px;
+    border-radius: 12px;
     @media screen and (min-width: 768px) {
         padding: 40px;
     }
 }
-// .studding-payments {
-// }
 .studding-payments_currency-tabs-list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 16px;
   @media screen and (min-width: 768px) {
     gap: 52px;
+    flex-wrap: nowrap;
   }
   @media screen and (min-width: 1200px) {
     gap: 70px;
@@ -66,6 +69,7 @@
 .studding-payments_per-month-list {
   width: 100%;
   display: flex;
+  margin-bottom: 40px;
   gap: 24px;
   flex-direction: column;
   @media screen and (min-width: 768px) {
@@ -76,6 +80,7 @@
   }
   @media screen and (min-width: 1200px) {
     gap: 22px;
+    margin-bottom: 52px;
     flex-wrap: nowrap;
   }
 }
@@ -91,6 +96,9 @@
 .studding-payments_quantity-months {
   width: 100%;
   height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: $color-sale-yellow;
   position: relative;
   border-radius: 8px;
@@ -110,16 +118,29 @@
 .studding-payments_box {
   border: 1px solid $color-tabs-yellow;
   border-radius: 12px;
-  padding: 24px 56px 34px 24px;
+  text-align: center;
+  padding: 24px 56px 34px 52px;
   @media screen and (min-width: 768px) {
     padding: 24px 24px 34px 24px;
   }
 }
 .studding-payments_discount {
-  border-radius: 50%;
-  background-color: $color-sale-ashen;
+  position: relative;
   font-size: 24px;
   margin-bottom: 33px;
+  display: block;
+}
+.studding-payments_discount::before{
+  background: $color-sale-ashen;
+  border-radius: 50%;
+  width: 43px;
+  height: 43px;
+  z-index: -1;
+  content: "";
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 .studding-payments_new-price {
   font-size: 32px;
