--- a/wp-content/themes/goiteens/assets/scss/base/_base.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_base.scss
@@ -34,4 +34,15 @@ nav,
 main {
 
 }
-
+p,h1,h2,h3,h4{
+    margin: 0;
+    
+}
+a{
+    text-decoration: none;
+}
+ul{
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
