--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_index.scss
@@ -1,4 +1,6 @@
+@import "./default-reset";
 @import "./sales-section-title";
+@import "./container-sales-.page";
 @import "./sales-hero";
 @import "./studding";
 @import "./learn-profitably";
