--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
@@ -1,9 +1,37 @@
 .learn-profitably {
     background-color: $color-sale-yellow;
-    padding: 52px 0;
+    padding-bottom: 52px ;
+    position: relative;
+    z-index: 1;
     @media screen and (min-width: 768px) {
-        padding: 88px 0;
+        padding-bottom: 88px;
     }
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 116px;
+    }
+    &::before{
+          content: '';
+          display: block;
+          z-index: 1;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          background-image: url(../images/sales-page/learn-mob.svg);
+          background-repeat: no-repeat;
+          background-position: top 70px center;
+          background-size: 246px auto contain;
+      
+          @media screen and (min-width: 768px) {
+            background-image: url(../images/sales-page/learn-tab.svg);
+            background-position: top -20px right -10px;
+          background-size: 946px auto contain;
+          }
+            @media screen and (min-width: 1200px) {
+                background-image: url(../images/sales-page/learn-desk.svg);
+                background-position: top -20px right 20px;
+                background-size: 100% auto contain;
+            }
+        }
 }
 .learn-profitably_img {
     display: block;
@@ -17,7 +45,6 @@ margin-bottom: 94px;
 @media screen and (min-width: 768px) {
    margin-bottom: 0;
    margin-left: -15%;
-
 }
 @media screen and (min-width: 1200px) {
     margin-left: 0;
@@ -31,14 +58,14 @@ margin-bottom: 94px;
     @media screen and (min-width: 768px) and (max-width: 1199px){
         margin-left: -48%;
         display: grid;
-        row-gap: 94px;
+        row-gap: 95px;
         column-gap: 32px;
         grid-template-columns:1fr 1fr;
         grid-template-rows:minmax(100px, auto);
     }
     @media screen and (min-width: 1200px) {
         display: grid;
-      margin-left: 32px;
+      margin-left: 58px;
       width: 64%; 
       row-gap: 0;
       column-gap: 32px;
@@ -57,7 +84,7 @@ margin-bottom: 94px;
         
     }
     @media screen and (min-width: 1200px) {
-        padding: 50px 50px 20px 20px;
+        padding: 60px 50px 20px 20px;
       width: 300px;
       max-height: 252px;
     }
@@ -95,6 +122,7 @@ margin-bottom: 94px;
         @media screen and (min-width: 1200px){
             grid-column: 1 / 2;
             grid-row: 3 / 5;
+            margin-top: 10%;
         }
     }
     &:nth-child(4){
