--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_gift-certificate.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_gift-certificate.scss
@@ -1,6 +1,13 @@
 .gift-wrapper {
     padding: 52px 0;
-}
+    position: relative;
+    @media screen and (min-width: 768px) {
+      padding: 88px 0;
+    }
+    @media screen and (min-width: 1200px) {
+      padding: 132px 0;
+    }
+  }
 .gift-certificate {
     padding-bottom: 60px;
     @media screen and (min-width: 768px) {
@@ -29,11 +36,8 @@ transition: color 750ms, background-color 750ms, border-color 750ms;
     color: $color-black;
 border-color: $color-sale-purple;
 background-color:transparent
-
 }
-
 }
-
 .gift-certificate_img{
     display: block;
     
@@ -168,7 +172,6 @@ background-color:transparent
 & > p:not(:last-child){
     margin-bottom: 30px;
 }
-
 }
 
 
