--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
@@ -22,9 +22,9 @@
 .studding-process {
   padding-bottom: 60px;
   position: relative;
-  z-index: 30;
 }
 .studding-process_description {
+  background-color: $color-white;
   margin-bottom: 32px;
   padding: 20px;
   border-radius: 12px;
@@ -79,30 +79,31 @@
   }
 }
 }
-.studding-wrapper::after{
-  content: '';
-  display: block;
-  z-index: 3;
-  position: absolute;
-  background-repeat: no-repeat;
-  background-position: top 0 left 0, bottom 50% right -50px;
-  background-size: 221px, 245px;
+// .studding-wrapper::after{
+//   content: '';
+//   display: block;
+//   z-index: 3;
+//   position: absolute;
+//   background-repeat: no-repeat;
+//   background-position: top 0 left 0, bottom 50% right -50px;
+//   background-size: 221px, 245px;
 
 
-  @media screen and (min-width: 768px) {
-    width: 90%;
-    height: 90%;
-    top:-30px;
-    left:-30px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 440px;
-    height: 413px;
-    top:-30px;
-    left:-30px;
-  }
-}
+//   @media screen and (min-width: 768px) {
+//     width: 90%;
+//     height: 90%;
+//     top:-30px;
+//     left:-30px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     width: 440px;
+//     height: 413px;
+//     top:-30px;
+//     left:-30px;
+//   }
+// }
 .studding-process_timeline {
+  background-color: $color-white;
     box-shadow: 0px 1px 2px rgba(92, 46, 145, 0.08), 10px 10px 40px rgba(92, 46, 145, 0.24);
     padding: 20px;
     border-radius: 12px;
@@ -260,8 +261,9 @@
   border: 1px solid $color-sale-purple;
   border-radius: 8px;
     width: 100%;
-    background-color: transparent;
+    background-color: $color-white;
     height: 100%;
+    font-weight: 500;
     display: flex;
     justify-content: center;
     align-items: center;
