--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_learn-profitably.scss
@@ -1,37 +1,47 @@
 .learn-profitably {
     background-color: $color-sale-yellow;
-    padding-bottom: 52px ;
+    padding: 52px 0;
     position: relative;
     z-index: 1;
-    @media screen and (min-width: 768px) {
-        padding-bottom: 88px;
-    }
-    @media screen and (min-width: 1200px) {
-        padding-bottom: 116px;
-    }
-    &::before{
-          content: '';
-          display: block;
-          z-index: 1;
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          background-image: url(../images/sales-page/learn-mob.svg);
+    background-image: url(../images/sales-page/learn-mob.svg);
           background-repeat: no-repeat;
           background-position: top 70px center;
           background-size: 246px auto contain;
-      
-          @media screen and (min-width: 768px) {
-            background-image: url(../images/sales-page/learn-tab.svg);
+    @media screen and (min-width: 768px) {
+        padding: 88px 0;
+        background-image: url(../images/sales-page/learn-tab.svg);
             background-position: top -20px right -10px;
           background-size: 946px auto contain;
-          }
-            @media screen and (min-width: 1200px) {
-                background-image: url(../images/sales-page/learn-desk.svg);
+    }
+    @media screen and (min-width: 1200px) {
+        padding: 116px 0;
+          background-image: url(../images/sales-page/learn-desk.svg);
                 background-position: top -20px right 20px;
                 background-size: 100% auto contain;
-            }
-        }
+    }
+    // &::before{
+    //       content: '';
+    //       display: block;
+    //       z-index: 1;
+    //       width: 100%;
+    //       height: 100%;
+    //       position: absolute;
+    //       background-image: url(../images/sales-page/learn-mob.svg);
+    //       background-repeat: no-repeat;
+    //       background-position: top 70px center;
+    //       background-size: 246px auto contain;
+      
+    //       @media screen and (min-width: 768px) {
+    //         background-image: url(../images/sales-page/learn-tab.svg);
+    //         background-position: top -20px right -10px;
+    //       background-size: 946px auto contain;
+    //       }
+    //         @media screen and (min-width: 1200px) {
+                // background-image: url(../images/sales-page/learn-desk.svg);
+                // background-position: top -20px right 20px;
+                // background-size: 100% auto contain;
+    //         }
+    //     }
 }
 .learn-profitably_img {
     display: block;
