Fix Style Files

--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_index.scss
@@ -1,8 +1,8 @@
-@import "./default-reset";
-@import "./sales-section-title";
-@import "./container-sales-.page";
-@import "./sales-hero";
-@import "./studding";
-@import "./learn-profitably";
-@import "./gift-certificate";
-
+@import "container";
+@import "default-reset";
+@import "sales-section-title";
+@import "container-sales-.page";
+@import "sales-hero";
+@import "studding";
+@import "learn-profitably";
+@import "gift-certificate";
