Add Body Class and Header z-index

--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_container.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_container.scss
@@ -1,5 +1,11 @@
 .sale_page {
 
+  header {
+    &.header {
+      z-index: 3;
+    }
+  }
+
   .container-sales{
     width: 100%;
     padding: 0 24px;
