--- a/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/sales/_studding.scss
@@ -363,6 +363,14 @@
   }
   .studding-payments_price-list {
     margin-bottom: 46px;
+
+    &:not(.active) {
+      display: none;
+    }
+
+
+
+
   }
   .studding-payments_button-pay {
     display: flex;
