--- a/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
@@ -1,7 +1,117 @@
 .itm_newyear {
-
+  p,h1,h2,h3,h4{
+    margin: 0;
+  }
+  padding: 28px 0;
+  @media screen and (min-width: 768px) {
+    padding: 55px 0;
+  }
   &__expect {
+    .expect_wrapper{
+      @media screen and (min-width: 1280px) {
 
+        max-width: 1440px;
+      }
+    }
+    .expect_question {
+      font-size: 24px;
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: 44px;
+      @media screen and (min-width: 768px) {
+        margin-bottom: 50px;
+        text-align: start;
+        font-size: 40px;
+      }
+    }
+    .expect_days-list {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      margin-bottom: 51px;
+      padding-left: 110px;
+      position: relative;
+    }
+
+    .expect_days-item {
+      position: relative;
+      & > h3 {
+        margin-bottom: 4px;
+        font-size: 20px;
+        text-transform: uppercase;
+        line-height: 1.2;
+        font-weight: 700;
+      
+      @media screen and (min-width: 1280px) {
+       font-size: 32px;
+       line-height: 1.22;
+      }
+  
+      }
+& > p{
+  font-size: 16px;
+  line-height: 1.19;
+  @media screen and (min-width: 1280px) {
+    font-size: 24px;
+    line-height: 1.21;
+   }
+
+}
+    }
+    .expect_days-item :nth-child(1)::before{
+      position: absolute;
+      content: "";
+
+      @media screen and (min-width: 1280px) {
+       
+      }
+    }
+    .expect_days-item :nth-child(2)::before{
+      @media screen and (min-width: 1280px) {
+       
+      }
+    }
+    .expect_days-item :nth-child(3)::before{
+      @media screen and (min-width: 1280px) {
+       
+      }
+    }
+    .expect_days-item :nth-child(4)::before{
+      @media screen and (min-width: 1280px) {
+       
+      }
+    }
+    .expect_days-item :nth-child(5)::before{
+      @media screen and (min-width: 1280px) {
+       
+      }
+    }
+    .expect_suggestion {
+      font-size: 24px;
+      margin-bottom: 26px;
+      font-weight: 700;
+      text-align: center;
+      display: block;
+      @media screen and (min-width: 1280px) {
+     font-size: 48px;
+     margin-bottom: 22px;
+      }
+    }
+    .expect_registration-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 296px;
+      height: 72px;
+      font-weight: 700;
+      font-size: 20px;
+      text-transform: uppercase;
+      background-color: #19A1CC;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
   }
 
 }
