--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -42,3 +42,6 @@ $color-green        :   #19B500;
 $color-purple       :   #7C62E3;
 $color-pink         :   #e01d4f;
 $color-orange       :   #F95738;
+$color-xmas-btn     :   #19A1CC;
+$color-xmas-red     :   #D10000;
+$color-xmas-beige   :   #F7F6F4;
