--- a/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/itmarathon/new-year/_expect.scss
@@ -6,9 +6,13 @@
   }
   &__expect {
     .expect_wrapper{
+      background-color: $color-xmas-beige;
       @media screen and (min-width: 1280px) {
-
+background-image: url(../images/itmarathon/xmas-img/expect-desk.svg);
+background-position: center;
+background-size: cover;
         max-width: 1440px;
+        height: 1407px;
       }
     }
     .expect_question {
@@ -31,11 +35,26 @@
       gap: 32px;
       margin-bottom: 51px;
       padding-left: 110px;
-      position: relative;
+      // position: relative;
+      background-image: url(../images/itmarathon/xmas-img/way-line-mob.svg);
+background-position: top 20px left -40px;
+background-size: cover;
+        width: 44px;
+        height: 62px;
+        @media screen and (min-width: 1280px) {
+          background-image: url(../images/itmarathon/xmas-img/way-line-mob.svg);
+          background-position: top 65px center;
+          background-size: cover;
+                  max-width: 826px;
+                  height: 1035px;
+         }
     }
 
     .expect_days-item {
       position: relative;
+      @media screen and (min-width: 1280px) {
+        max-width: 590px;
+       }
       & > h3 {
         margin-bottom: 4px;
         font-size: 20px;
@@ -46,6 +65,8 @@
       @media screen and (min-width: 1280px) {
        font-size: 32px;
        line-height: 1.22;
+       margin: 0;
+       padding-bottom: 25px;
       }
   
       }
@@ -59,34 +80,164 @@
 
 }
     }
-    .expect_days-item :nth-child(1)::before{
+    .expect_days-item :nth-child(1){
+      @media screen and (min-width: 1280px) {
+       text-align: start;
+      }
+      & > h3{
+        @media screen and (min-width: 1280px) {
+        background-image: url(../images/itmarathon/xmas-img/bg-item-1.svg);
+background-position: center;
+background-size: cover;
+        width: 205px;
+        height: 90px;
+        }
+      }
+    &::before{
+      width: 47px;
       position: absolute;
+      height: 70px;
       content: "";
+      display: block;
+      z-index: 1;
+      background-image:url(../images/itmarathon/xmas-img/tree-toy.svg);
+      background-position: top 0 left 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
 
       @media screen and (min-width: 1280px) {
-       
+        background-position: top 0 left 20px;
+        width: 112px;
+        height: 134px;
       }
     }
-    .expect_days-item :nth-child(2)::before{
+  }
+    .expect_days-item :nth-child(2){
       @media screen and (min-width: 1280px) {
-       
+        text-align: end;
+       }
+       & > h3{
+        @media screen and (min-width: 1280px) {
+        background-image: url(../images/itmarathon/xmas-img/bg-item-1.svg);
+background-position: center;
+background-size: cover;
+        width: 169px;
+        height: 71px;
+        }
       }
-    }
-    .expect_days-item :nth-child(3)::before{
+    &::before{
+      width: 47px;
+      position: absolute;
+      height: 46px;
+      content: "";
+      display: block;
+      z-index: 1;
+      background-image:url(../images/itmarathon/xmas-img/x-mas-hat.svg);
+      background-position: top 0 left 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
       @media screen and (min-width: 1280px) {
-       
+        background-position: top 0 right 20px;
+        width: 143px;
+        height: 140px;
       }
     }
-    .expect_days-item :nth-child(4)::before{
+  }
+    .expect_days-item :nth-child(3){
       @media screen and (min-width: 1280px) {
-       
+       text-align: start;
       }
-    }
-    .expect_days-item :nth-child(5)::before{
+      & > h3{
+        @media screen and (min-width: 1280px) {
+        background-image: url(../images/itmarathon/xmas-img/bg-item-1.svg);
+background-position: center;
+background-size: cover;
+        width: 186px;
+        height: 91px;
+        }
+      }
+    &::before{
+      width: 44px;
+      position: absolute;
+      height: 49px;
+      content: "";
+      display: block;
+      z-index: 1;
+      background-image:url(../images/itmarathon/xmas-img/present.svg);
+      background-position: top 0 left 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
       @media screen and (min-width: 1280px) {
-       
+        background-position: top 0 left 20px;
+        width: 74px;
+        height: 152px;
       }
     }
+  }
+    .expect_days-item :nth-child(4){
+      @media screen and (min-width: 1280px) {
+       text-align: end;
+      }
+      & > h3{
+        @media screen and (min-width: 1280px) {
+        background-image: url(../images/itmarathon/xmas-img/bg-item-1.svg);
+background-position: center;
+background-size: cover;
+        width: 208px;
+        height: 68px;
+        }
+      }
+    &::before{
+      width: 80px;
+      position: absolute;
+      height: 80px;
+      content: "";
+      display: block;
+      z-index: 1;
+      background-image:url(../images/itmarathon/xmas-img/tree-man-2x.png);
+      background-position: top 0 left 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transform: scaleX(-1);
+      @media screen and (min-width: 1280px) {
+        transform: scaleX(0);
+        background-position: top 0 left 20px;
+        width: 200px;
+        height: 207px;
+      }
+    }
+  }
+    .expect_days-item :nth-child(5){
+      @media screen and (min-width: 1280px) {
+       text-align: start;
+      }
+      & > h3{
+        @media screen and (min-width: 1280px) {
+        background-image: url(../images/itmarathon/xmas-img/bg-item-1.svg);
+background-position: center;
+background-size: cover;
+        width: 162px;
+        height: 52px;
+        }
+      }
+    &::before{
+      width: 52px;
+      position: absolute;
+      height: 67px;
+      content: "";
+      display: block;
+      z-index: 1;
+      background-image:url(../images/itmarathon/xmas-img/candy.svg);
+      background-position: top 0 left 20px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      @media screen and (min-width: 1280px) {
+        background-position: top 0 left 20px;
+        width: 122px;
+        height: 125px;
+      }
+    }
+  }
     .expect_suggestion {
       font-size: 24px;
       margin-bottom: 26px;
@@ -107,9 +258,8 @@
       font-weight: 700;
       font-size: 20px;
       text-transform: uppercase;
-      background-color: #19A1CC;
+      background-color: $color-xmas-btn;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
-
 }
